--- a/lectures/Day_5.slides.html
+++ b/lectures/Day_5.slides.html
@@ -14671,7 +14671,33 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Review-of-Day-4">Review of Day 4<a class="anchor-link" href="#Review-of-Day-4">&#182;</a></h3>
+<h3 id="Review-of-Day-4">Review of Day 4<a class="anchor-link" href="#Review-of-Day-4">&#182;</a></h3><ul>
+<li>Scop of variables<ul>
+<li>Variables defined inside the function are local varaibles</li>
+<li>Be cautious to use global variables</li>
+</ul>
+</li>
+<li>Positional arguments and keyword arguments<ul>
+<li>Use keyword arguments to improve the explicity when calling a function</li>
+</ul>
+</li>
+<li><code>return</code> statement<ul>
+<li>Return meaningful result for a function to make it more reusable</li>
+</ul>
+</li>
+<li>Comments and documentation<ul>
+<li>How to create your own module with both module level documentation and help message for functions</li>
+<li>Although code should explain by itself, comment the code when it's hard to understand.</li>
+</ul>
+</li>
+<li>Importing modules: using libraries<ul>
+<li>import os</li>
+<li>from math import pi</li>
+</ul>
+</li>
+<li>Brief introduction to Biopython using <code>SeqIO</code></li>
+</ul>
+
 </div>
 </div>
 </div>
@@ -14682,7 +14708,10 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="Review-of-Quiz-of-Day-4">Review of Quiz of Day 4<a class="anchor-link" href="#Review-of-Quiz-of-Day-4">&#182;</a></h3>
+<h3 id="Review-of-the-quiz-from-Day-4">Review of the quiz from Day 4<a class="anchor-link" href="#Review-of-the-quiz-from-Day-4">&#182;</a></h3><ul>
+<li><a href="https://forms.office.com/Pages/DesignPageV2.aspx?origin=NeoPortalPage&subpage=design&id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAa__Yehr4dUQkVYOVlONlNIVEVZRTEyUTAwT0s0SzgzTy4u&analysis=true">Link to the quiz statistics</a></li>
+</ul>
+
 </div>
 </div>
 </div>
@@ -17699,25 +17728,9 @@ File <span class="ansi-green-fg">~/anaconda3/envs/python-workshop/lib/python3.9/
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Take-a-break">Take a break<a class="anchor-link" href="#Take-a-break">&#182;</a></h2><h2 id="Day-5,-Exercise-1-(~30-minutes)">Day 5, Exercise 1 (~30 minutes)<a class="anchor-link" href="#Day-5,-Exercise-1-(~30-minutes)">&#182;</a></h2><p><a href="https://python-bioinfo.bioshu.se/exercises/day5/Day_1_Exercise_1.html">https://python-bioinfo.bioshu.se/exercises/day5/Day_1_Exercise_1.html</a></p>
-<ul>
-<li><p><strong>Easy</strong>:</p>
-<ul>
-<li>Explore the <code>Orange_1.tsv</code></li>
-</ul>
-</li>
-<li><p><strong>Medium/hard</strong>:</p>
-<ul>
-<li>Use Pandas to read VCF file</li>
-<li>Explore it by making graphs</li>
-</ul>
-</li>
-<li><p><strong>Extra exercises</strong>:</p>
-<ul>
-<li>Read the pandas documentation :)</li>
-<li>Start exploring your own data</li>
-</ul>
-</li>
+<h3 id="Take-a-break">Take a break<a class="anchor-link" href="#Take-a-break">&#182;</a></h3><hr>
+<h2 id="Day-5,-Exercise-1">Day 5, Exercise 1<a class="anchor-link" href="#Day-5,-Exercise-1">&#182;</a></h2><ul>
+<li>Link: <a href="https://python-bioinfo.bioshu.se/exercises.html">https://python-bioinfo.bioshu.se/exercises.html</a></li>
 </ul>
 
 </div>
@@ -17734,22 +17747,181 @@ File <span class="ansi-green-fg">~/anaconda3/envs/python-workshop/lib/python3.9/
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="(AI)-Artificial-Intelligence:-A-Global-Phenomenon">(AI) Artificial Intelligence: A Global Phenomenon<a class="anchor-link" href="#(AI)-Artificial-Intelligence:-A-Global-Phenomenon">&#182;</a></h3><p><img src="img/Chatgpt-Users-Growth.png" alt="User Growth" style="floating: right;width: 500px;"/></p>
 
-     </div>
 </div>
 </div>
 </div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="What-AI-can-do">What AI can do<a class="anchor-link" href="#What-AI-can-do">&#182;</a></h2><ul>
+<li>Helping with decision-making, automation, and data analysis.</li>
+<li>Creating Art work</li>
+<li>Assisting in health care</li>
+<li>Self-driving car </li>
+<li>Serving as a good friend, mentor</li>
+<li><strong>Helping with programmming</strong> (this is what we care in this course)</li>
+</ul>
 
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="AI-can-program-when-instructed-with-natural-language">AI can program when instructed with natural language<a class="anchor-link" href="#AI-can-program-when-instructed-with-natural-language">&#182;</a></h2><h4 id="Task:">Task:<a class="anchor-link" href="#Task:">&#182;</a></h4><p>I have a sequence file in fasta format, write a Python script that can take the sequence as an argument from the command line and print the result in the following format</p>
+<p>seqid seqlength</p>
+<h4 id="input-the-above-instruction-to-both-WenXinYiYan-and-ChatGPT.">input the above instruction to both WenXinYiYan and ChatGPT.<a class="anchor-link" href="#input-the-above-instruction-to-both-WenXinYiYan-and-ChatGPT.">&#182;</a></h4>
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="For-more-complicated-tasks,-AI-may-not-work-as-expected">For more complicated tasks, AI may not work as expected<a class="anchor-link" href="#For-more-complicated-tasks,-AI-may-not-work-as-expected">&#182;</a></h3>
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="A-practical-procedure">A practical procedure<a class="anchor-link" href="#A-practical-procedure">&#182;</a></h3><p><img src="img/work-with-AI-flowchart.png" alt="AI flowchart" style="floating: right;width: 450px;"/></p>
+
+</div>
+</div>
+</div>
+</div><div class="fragment">
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<ul>
+<li>There is actually a type of job: <strong>prompt engineer</strong> - designs and refines prompts for LLMs to accomplish the tasks </li>
+</ul>
+
+</div>
+</div>
+</div>
+</div></div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="AI-can-be-integrated-into-the-text-editors,-e.g.">AI can be integrated into the text editors, e.g.<a class="anchor-link" href="#AI-can-be-integrated-into-the-text-editors,-e.g.">&#182;</a></h3><ul>
+<li>Github Copilot<ul>
+<li>developed by GitHub in collab with OpenAI</li>
+<li>provides context-aware code suggestions </li>
+<li>help writing code, debugging</li>
+</ul>
+</li>
+<li>IntelliCode<ul>
+<li>by Microsoft</li>
+<li>provides context-aware code suggestions</li>
+</ul>
+</li>
+<li>Tabnine<ul>
+<li>code completion tool</li>
+</ul>
+</li>
+<li>Kite<ul>
+<li>helps with code completion, error correction, and code navigation</li>
+</ul>
+</li>
+</ul>
+<p>It can generate or predict the code while you are programming</p>
+
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="Why-do-we-still-need-to-learn-Python-if-AI-can-program?">Why do we still need to learn Python if AI can program?<a class="anchor-link" href="#Why-do-we-still-need-to-learn-Python-if-AI-can-program?">&#182;</a></h3><ul>
+<li>AI has limitations and can generate incorrect or suboptimal code<ul>
+<li>Understanding the fundamentals allows you to identify, troubleshoot, and fix these issues.</li>
+</ul>
+</li>
+<li>Learning programming fundamentals helps develop problem-solving skills and algorithmic thinking<ul>
+<li>You need to guide AI with algorithmic thinking so that AI can generate expected result</li>
+</ul>
+</li>
+<li>AI still lacks true innovation <ul>
+<li>It generates code based on existing patterns and data</li>
+</ul>
+</li>
+</ul>
+
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="Pros">Pros<a class="anchor-link" href="#Pros">&#182;</a></h3><ul>
+<li>Increased productivity</li>
+<li>Improved accuracy - many typos and obvious errors will be eliminated</li>
+<li>AI makes programming accessible to those with no programming skills<ul>
+<li>Researcher without a solid programming trainning can directly practice their ideas with programs. 
+### Cons</li>
+</ul>
+</li>
+<li>Limited creativity</li>
+<li>Bias and inaccuracy </li>
+<li>Replying too much on AI can cause people lack of imaginagtion and cirtical thinking</li>
+</ul>
+
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<div style="display: flex; flex-direction: column; align-items: center;">
+  <img src="img/research_fields.png" style="max-width: 100%; height: auto; margin-bottom: 10px;" />
+</div>
+</div>
+</div>
+</div>
 </div>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
@@ -17757,7 +17929,34 @@ File <span class="ansi-green-fg">~/anaconda3/envs/python-workshop/lib/python3.9/
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Mini-exercise-(15-min)">Mini exercise (15 min)<a class="anchor-link" href="#Mini-exercise-(15-min)">&#182;</a></h2><h2 id="5-min-break-before-the-last-lecture">5 min break before the last lecture<a class="anchor-link" href="#5-min-break-before-the-last-lecture">&#182;</a></h2>
+<div style="display: flex; width: 100%; justify-content: space-between;">
+    <img src="img/programming_experience.png" style="floating: left; width: 300px;" />
+    <img src="img/bioinformatics_experience.png" style="floating: right; width: 450px;" />
+  </div>
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="Exercise-(15-min)">Exercise (15 min)<a class="anchor-link" href="#Exercise-(15-min)">&#182;</a></h2><p>Create the same figure using AI, given the Excel file <a href="python-bioinfo.bioshu.se/lectures/student_survey.xlsx">python-bioinfo.bioshu.se/lectures/student_survey.xlsx</a></p>
+<hr>
+<h4 id="Take-a-break-before-summary">Take a break before summary<a class="anchor-link" href="#Take-a-break-before-summary">&#182;</a></h4>
+</div>
+</div>
+</div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h2 id="Summary">Summary<a class="anchor-link" href="#Summary">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -17768,26 +17967,72 @@ File <span class="ansi-green-fg">~/anaconda3/envs/python-workshop/lib/python3.9/
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Conclusion-remarks">Conclusion remarks<a class="anchor-link" href="#Conclusion-remarks">&#182;</a></h2>
+<p>We have learned the fundermental concepts of Python and now you should be able to</p>
+<ul>
+<li>Know how to write a Python script to acheive basic bioinformatics tasks </li>
+<li>Know how to use the external Python modules and packages to facilitate your coding task</li>
+<li>Know basic of data analysis and plotting with the Pandas module</li>
+<li>Know how to further develop your Python skills with numeras online tutorials and documentation</li>
+</ul>
+
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<ul>
+<li>With the emergence of AI chatbot like ChatGPT, the effort to memorize the usage of numerous modules and methods is meaningless, unless efficiency is the main target of your programming.</li>
+<li>Instead, the ability to raise the question and suggest steps to solve the question is more important.</li>
+<li>It is important to build a broad domain knowledge to effectively instruct and leverage AI tools.</li>
+</ul>
 
-     </div>
 </div>
 </div>
 </div>
+</div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="The-learning-and-forgetting-curve">The learning and forgetting curve<a class="anchor-link" href="#The-learning-and-forgetting-curve">&#182;</a></h3><p><img src="img/learning_curve.png" style="width: 600px;" /></p>
 
+</div>
+</div>
+</div>
+</div><div class="fragment">
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<ul>
+<li>Use it in your research</li>
+<li>Discuss it with your colleagues</li>
+<li>AI as your learning parter</li>
+</ul>
+
+</div>
+</div>
+</div>
+</div></div></section></section><section><section>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h1 id="Thank-you!">Thank you!<a class="anchor-link" href="#Thank-you!">&#182;</a></h1>
+</div>
+</div>
+</div>
 </div></section></section>
 </div>
 </div>
